# IAL-projects

./: .travis.yml  CMakeLists.txt  README.md
src/: c202.c  c204.c  c206.c  main.c
src/c016/: Makefile  c016-test.c  c016.c  c016.h
src/c202/: Makefile  c202.c
src/c204/: Makefile  c204.c
src/c206/: Makefile  c206.c
src/c401/: Makefile  c401-test.c  c401.c  c401.h
src/c402/: Makefile  c402-test.c  c402.c  c402.h
test/: BT_recursive.cpp  inf_to_post.cpp  linear_list.cpp  stack.cpp  test.cpp
